--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,12 @@
     <packaging>war</packaging>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+
         <netbeans.hint.deploy.server>Tomcat</netbeans.hint.deploy.server>
         <tomcat.version>9.0.17</tomcat.version>
         <taglibs-standard.version>1.2.5</taglibs-standard.version>
